# ArchitectureAndDesignPatterns_HW6_AdapterAndBridge

./: .gitignore  CMakeLists.txt  README.md
source/: Adapter_ispaceship.hpp  Adapter_testInterfaceFile.cpp  Adapter_testInterfaceFile.hpp  cIoC.hpp  ccppfunctiondeclarationparser.cpp  ccppfunctiondeclarationparser.hpp  cexception.hpp  cgenerateaadapter.cpp  cgenerateaadapter.hpp  cgenerateadapter.cpp  cgenerateadapter.hpp  cvector.hpp  iAdapterObj.hpp  ispaceship.hpp  main_cgenerateadapter.cpp  testInterfaceFile.cpp  testInterfaceFile.hpp
source/tests/: test_cCppFunctionDeclarationParser.cpp  test_cGenerateAdapter.cpp  test_cGenerateaAdapter.cpp
